[metadata]
name = scheduled_futures
version = attr: scheduled_futures.__version__
author = Connor Sherwood Maynes
author_email = connormaynes@gmail.com
description = concurrent.futures extension with a ScheduledThreadPoolExecutor to handle delayed and periodic futures with rescheduling
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5,<4
install_requires =
