[metadata]
name = scheduled_futures
version = attr: scheduled_futures.__version__
author = Connor Sherwood Maynes
author_email = connormaynes@gmail.com
description = concurrent.futures extension with a ScheduledThreadPoolExecutor to handle delayed and periodic futures with rescheduling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ConnorSMaynes/scheduled_futures
license = MIT
keywords =
	concurrent.futures
	apscheduler
	asyncio
	periodic
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5,<4
install_requires =
